# nanowave-ui

./: .gitignore  Cargo.toml  README.md  build.rs
src/: database_wrapper.rs  file_utils.rs  main.rs  nanowave_service.rs  tokio_background_tasks.rs  websockets.rs
src/background/: database_existence_checker.rs  database_updater.rs  database_upsert_item.rs  file_scanner.rs  media_analyzer.rs  metadata_retriever.rs  mod.rs
src/migrator/: mod.rs
ui/: main.slint
ui/main/: audiobooks.slint
