[package]
name = "nanowave-ui"
version = "0.1.0"
edition = "2024"

[dependencies.slint]
version = "1.15.0" # "1.14.1" # version = "1.15.0" # use for local git (configured in .cargo/config.toml)
features = ["backend-linuxkms-noseat", "renderer-software", "compat-1-2"]

[dependencies]
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
tungstenite = "0.28.0"
crossbeam-channel = "0.5"
anyhow = "1.0.100"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = "0.28.0"

[build-dependencies]
slint-build = "1.15.0"

