[package]
name = "nanowave-ui"
version = "0.1.0"
edition = "2024"

[dependencies.slint]
version = "1.15.0" # "1.14.1" # version = "1.15.0" # use for local git (configured in .cargo/config.toml)
features = ["backend-linuxkms-noseat", "renderer-software", "compat-1-2"]

[dependencies]
anyhow = "1.0.100"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
walkdir = "2.5.0"
media_source = "0.1.0"
sea-orm = { version = "2.0.0-rc.30", features = [ "sqlx-sqlite", "macros", "runtime-tokio", "debug-print", "with-chrono", "with-json" ] }
sea-orm-migration = "2.0.0-rc.30"
tracing = "0.1.44"
chrono = "0.4.43"
file-id = "0.2.3"
lofty = "0.22.4"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
mp4ameta = "0.13.0"
image = "0.25.9"

[patch.crates-io]
media_source = { path = "../media_source/" } # use for local git (see cargo.toml)



[build-dependencies]
slint-build = "1.15.0"


